# chimera

./: .gitignore  README.md  pyproject.toml
chimera/: __init__.py  __main__.py  orchestrator.py
chimera/app_graph/: __init__.py  actions.py  app_graph.py  compose.py  declared_state.py  popup.py  xpath_driver.py
chimera/core/: driver.py  errors.py  models.py
chimera/execution/: actions.py  executor.py
chimera/healing/: __init__.py  healer.py
chimera/learning/: __init__.py  engine.py
chimera/memory/: migrations.py  schemas.sql  store.py
chimera/perception/: __init__.py  capture.py  fingerprint.py  parser.py
chimera/profiler/: __init__.py  app_profiler.py  app_resolver.py
chimera/reasoning/: __init__.py  matcher.py  ollama_client.py  prompts.py
chimera/selector/: __init__.py  generator.py  ranker.py  validator.py
chimera/state/: __init__.py  detector.py  graph.py  models.py  navigator.py  planner.py  store.py
examples/: whatsapp.py  whatsapp_xpaths.py
scripts/: inspect_db.py  probe_device.py
tests/: test_app_graph.py  test_learning.py  test_memory.py  test_memory_versioning.py  test_orchestrator_normalize.py  test_perception.py  test_profiler.py  test_resolver.py  test_selector.py  test_state_detector.py  test_state_models.py  test_state_planner.py  test_state_store.py
tests/fixtures/: whatsapp_chat.xml
