[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera"
version = "0.1.0"
description = "Adaptive, selector-free Android UI automation with LLM-driven discovery and self-healing."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "Appium-Python-Client>=4.0.0",
    "selenium>=4.18.0",
    "lxml>=5.1.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
visual = ["opencv-python>=4.9.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
chimera = "chimera.__main__:main"

[tool.setuptools.packages.find]
include = ["chimera*"]

[tool.ruff]
line-length = 100
target-version = "py310"
